--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,6 @@ version = "0.1.0"
 authors = ["lydiolectal <lydiding@gmail.com>"]
 
 [dependencies]
-tempfile = "3.0.2"
+tempfile    = "3.0.2"
+regex       = "1.0.1"
+lazy_static = "1.0.1"
